# rustls

./: Cargo.toml
examples/: Cargo.toml
provider-example/: Cargo.toml
provider-example/examples/: client.rs
provider-example/src/: aead.rs  lib.rs
rustls/: Cargo.toml
rustls/examples/internal/: bogo_shim.rs
rustls/src/: builder.rs  key.rs  lib.rs  quic.rs  suites.rs  verify.rs  verifybench.rs
rustls/src/client/: builder.rs  handy.rs  tls13.rs
rustls/src/crypto/: mod.rs
rustls/src/crypto/ring/: anchors.rs  mod.rs  sign.rs  verify.rs
rustls/src/crypto/ring/server/: mod.rs
rustls/src/server/: builder.rs  handy.rs  server_conn.rs  tls13.rs
rustls/src/tls13/: mod.rs
rustls/src/webpki/: mod.rs  verify.rs
rustls/tests/: api.rs  client_cert_verifier.rs
