[workspace]
members = [
  # tests and example code
  "examples",
  # the main library and tests
  "rustls",
  # example of custom provider
  "provider-example",
]
default-members = [
  "examples",
  "rustls",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[patch.crates-io]
webpki = { git = "https://github.com/rustls/webpki", rev = "97f841de70", package = "rustls-webpki" }
