[package]
name = "rustls-provider-example"
version = "0.0.1"
edition = "2021"
rust-version = "1.60"
license = "Apache-2.0 OR ISC OR MIT"
description = "Example of rustls with custom crypto provider."
publish = false

[dependencies]
chacha20poly1305 = "0.10.0"
rand_core = "0.5.0"
hmac = "0.12.0"
rustls = { path = "../rustls", default-features = false, features = [ "logging", "dangerous_configuration" ]}
sha2 = "0.10.0"
x25519-dalek = "1"

[dev-dependencies]
